# pervasive-seminar-elevator-demo

./: README.md  ReadMe.txt
ElevatorPrototype/: CMakeLists.txt  Elevator1_Arc.qml  Elevator1_Fill.qml  FloorButtonArcFilling.qml  FloorButtonCircleBorderFill.qml  FloorButtonCircleFill.qml  FloorClusterCircle.qml  FloorClusterCircle_central.qml  main.cpp  main.qml  server_test.cpp  server_test.h
RecognitionSignalCode/: ProtoRun.py  environment.yaml
